# jaseci

./: .dockerignore  .gitignore  .jacignore  .pre-commit-config.yaml  BENCHMARKS_AND_FINDINGS.md  CITATION.cff  CONTRIBUTING.md  JAC_AUTHORING_SKILL_EVAL.md  PLAN-tui-in-process.md  PLAN-tui-io-capture.md  PLAN.md  PRIMITIVE_COVERAGE.md  README.md  SKILL.md  analysis-centralization-plan.md  conftest.py  gen_parser.sh  greptile.json  jac.toml  mypy.ini  ruff.toml  views-in-jac.md
jac/: .gitignore  CHANGELOG  JAC_TOML_ARCHITECTURE_PLAN.md  JAC_TOML_SIMPLIFIED_PLAN.md  JAC_TYPE_SYSTEM_PHASE1_IMPLEMENTATION.md  JAC_TYPE_SYSTEM_PRODUCTION_PLAN.md  README.md  _jac_finder.py  build.zig  build.zig.zon  jac.toml  pyproject.toml  setup.py  sitecustomize.py
jac-byllm/: README.md  jac.toml  pyproject.toml
jac-byllm/byllm/: __init__.py  cli.jac  config_loader.jac  exceptions.jac  lib.jac  llm.jac  llm.py  llm_connector.py  local_runtime.jac  mcp.jac  model_cache.jac  mtir.jac  mtir.py  parallel.jac  plugin.jac  plugin.py  plugin_config.jac  schema.jac  schema.py  telemetry.jac  tool_protocol.jac  types.jac  types.py  visit_routing.jac
jac-byllm/byllm/impl/: config_loader.impl.jac  mcp.impl.jac  mtir.impl.jac  schema.impl.jac
jac-byllm/byllm/llm.impl/: basellm.impl.jac  local.impl.jac  mockllm.impl.jac  model.impl.jac  modelpool.impl.jac
jac-byllm/byllm/mtir.impl/: mtir.impl.jac
jac-byllm/byllm/telemetry.impl/: telemetry.impl.jac
jac-byllm/byllm/types.impl/: media.impl.jac  message.impl.jac  tool.impl.jac  toolcall.impl.jac
jac-byllm/examples/core_examples/: level_genarator.jac  personality_finder.jac
jac-byllm/examples/microbenchmarks/: essay_review.jac  expert_answer.jac  joke_gen.jac  text_to_type.jac
jac-byllm/examples/tool_calling/: debate_agent.jac  fantasy_trading_game.jac  marketing_agency.jac  wikipedia_react.jac
jac-byllm/examples/vision/: mugen.jac  receipt_analyzer.jac
jac-byllm/scripts/: gh_release.py
jac-byllm/tests/: test_ai_agent.jac  test_byllm.jac  test_byllm.py  test_compaction.jac  test_mtir_integration.jac  test_mtir_integration.py  test_multimodal_tool_results.jac  test_parallel.jac  test_schema.jac  test_visit_routing.jac
jac-byllm/tests/fixtures/: async_by_llm.jac  basic_compile.jac  builtin_llm.jac  by_expr.jac  conversation_param.jac  demo_real_streaming.jac  enum_no_value.jac  image_test.jac  image_types.jac  image_with_sem.jac  llm_mail_summerize.jac  llm_params.jac  llm_semstrings.jac  llm_typed_retry.jac  math_poem_agents.jac  method_incl_ctx.jac  method_tool.jac  routing_dup_values.jac  routing_edge_choice.jac  routing_node_list.jac  routing_param_leak.jac  stream_retry.jac  streaming_conversation.jac  streaming_cross_context.jac  streaming_output.jac  streaming_visit_by.jac  streaming_with_react.jac  tool_function.jac  tool_method.jac  vehicle_finder.jac  webp_support_test.jac  with_llm_function.jac  with_llm_image.jac  with_llm_lower.jac  with_llm_method.jac  with_llm_type.jac  with_llm_video.jac
jac-client/: README.md  architecture.md  jac.toml  pyproject.toml
jac-client/jac_client/docs/: README.md  advanced-state.md  imports.md  lifecycle-hooks.md  working-with-ts.md
jac-client/jac_client/plugin/: cli.jac  cli.py  client.jac  client_runtime.cl.jac  node_helper.jac  plugin_config.jac  vite_client_bundle.jac
jac-client/jac_client/tests/: conftest.py  test_401_auto_logout.py  test_asset_examples.py  test_bun_installer.jac  test_cl.py  test_cli.jac  test_cli.py  test_config_dep_injection.jac  test_create_kinds.jac  test_desktop_api_url.jac  test_desktop_api_url.py  test_e2e.jac  test_form.jac  test_helpers.jac  test_helpers.py  test_it.jac  test_it.py  test_it_desktop.jac  test_mobile_target.jac  test_mobile_target_behavior.jac  test_nested_file.py  test_node_helper.py  test_static_target.jac  test_ts_support.py  test_wasm_target.jac
jac-mcp/: README.md  jac.toml  pyproject.toml
jac-mcp/jac_mcp/: __init__.py  compiler_bridge.jac  mode.jac  plugin.jac  plugin_config.jac  prompts.jac  resources.jac  server.jac  tools.jac
jac-mcp/jac_mcp/content/: patterns.md  pitfalls.md  understand.md
jac-mcp/jac_mcp/impl/: compiler_bridge.impl.jac  mode.impl.jac  prompts.impl.jac  resources.impl.jac  server.impl.jac  tools.impl.jac
jac-mcp/tests/: test_mcp.jac
jac-mcp/tests/fixtures/: valid_snippet.jac
jac-scale/: HANDOFF_microservice_e2e.md  README.md  jac.toml  pyproject.toml
jac-scale/examples/early-exit/: app_err.jac
jac-scale/examples/events/: jac.toml
jac-scale/examples/firestore-kvstore/: README.md  app.jac  jac.toml
jac-scale/jac_scale/: audit.jac  auth_models.jac  auth_tokens.jac  config_loader.jac  context.jac  db.jac  emailers.jac  enums.jac  firebase_env.jac  firestore_db.jac  identity_storage.jac  inprocess.jac  lib.jac  memory_hierarchy.jac  mongo_db.jac  mongo_storage.jac  plugin.jac  plugin_config.jac  redis_db.jac  scheduler.jac  serve.jac  sso_provider.jac  user_manager.jac  utils.jac  webhook.jac
jac-scale/jac_scale/_optdeps/: apscheduler.jac  docker.jac  firebase_auth.jac  firestore.jac  gcs.jac  kubernetes.jac  opentelemetry.jac  optional_deps.jac  pymongo.jac  pymongo.py  redis.jac
jac-scale/scripts/: Dockerfile.allinone.citest  Dockerfile.microservice  Dockerfile.microservice.exp  dockerignore.microservice  k8s_microservice_real_e2e.sh
jac/editor/: PROVENANCE.md
jac/jaclang/: PYCORE_MIGRATION_PLAN.md  __init__.py  __main__.py  jac.spec  jac0.py  lib.jac  lib.py  meta_importer.py  plugin.py  plugin_loader.jac  pytest_plugin.py
jac/launcher/: README.md  embed.zig  fetch-pbs.sh  fetch-typeshed.sh  launcher.zig  llvm_release.zig  mkpayload.sh  pack.zig  payload.zig  payload_test.zig  pyembed.zig  runtime.zig  update-typeshed.sh
jac/native/: README.md  glibc_compat.cpp  jacllvm.exports
jac/scripts/: precompile_bytecode.jac  property_to_native.py
jac/tests/: conftest.py  fixtures_list.jac  fixtures_list.py  ownership_helpers.jac  support.jac  test_discovery.jac  test_discovery.py
jaseci-package/: README.md  jac.toml  pyproject.toml
jaseci-package/jaseci/: __init__.py
(+4399 files in other folders)
