[project]
name = "byllm"
version = "0.5.5"
description = "byLLM Provides Easy to use APIs for different LLM Providers to be used with Jaseci's Jaclang Programming Language."
authors = [{name = "Jason Mars", email = "jason@mars.ninja"}]
maintainers = [{name = "Jason Mars", email = "jason@mars.ninja"}]
license = "MIT"
readme = "README.md"
keywords = ["llm", "jaclang", "jaseci", "byLLM"]
requires-python = ">=3.11"
dependencies = [
    "jaclang>=0.12.0",
    "litellm>=1.81.15,<1.83.0",
    "loguru>=0.7.2,<0.8.0",
    "pillow>=12.0.0,<13.0.0",
]

[project.entry-points."jac"]
byllm = "byllm.plugin:JacRuntime"
byllm_plugin_config = "byllm.plugin_config:JacByllmPluginConfig"

[tool.jac.hooks]
byllm = "get_mtir,call_llm,by,by_operator,default_llm"
byllm_plugin_config = "get_plugin_metadata,get_config_schema,on_config_loaded,validate_config"

[tool.jac.meta]
name = "byllm"
description = "byLLM - Easy to use APIs for LLM providers with Jaclang"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
]
tools = ["wikipedia"]
video = ["opencv-python-headless"]

[tool.setuptools.packages.find]
include = ["byllm*"]

[tool.setuptools.package-data]
"*" = ["*.jac", "*.impl/*.jac", "*.cl/*.jac"]
byllm = ["_precompiled/**/*.jir", "_precompiled/manifest.json"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
