[project]
name = "jac-mcp"
version = "0.1.3"
description = "MCP server for AI-assisted Jac development"
authors = [{name = "Jason Mars", email = "jason@mars.ninja"}]
maintainers = [{name = "Jason Mars", email = "jason@mars.ninja"}]
license = "MIT"
readme = "README.md"
keywords = ["jac", "jaclang", "jaseci", "mcp", "ai", "model-context-protocol"]
requires-python = ">=3.12"
dependencies = [
    "jaclang>=0.12.0",
    "mcp>=1.0.0",
]

[project.entry-points."jac"]
mcp = "jac_mcp.plugin:JacCmd"
mcp_plugin_config = "jac_mcp.plugin_config:JacMcpPluginConfig"

[tool.jac.hooks]
mcp = "create_cmd"
mcp_plugin_config = "get_plugin_metadata,get_config_schema"

[tool.jac.meta]
name = "mcp"
description = "MCP server for AI-assisted Jac development"

[tool.jac.commands.mcp]
help = "Start the MCP (Model Context Protocol) server for AI-assisted Jac development"
group = "tools"
args = [
    {name = "transport", default = "stdio", choices = ["stdio", "sse", "streamable-http"], help = "Transport protocol: stdio, sse, or streamable-http"},
    {name = "port", type = "int", default = 3001, help = "Port for SSE/HTTP transports (default: 3001)"},
    {name = "host", default = "127.0.0.1", short = "", help = "Bind address for SSE/HTTP transports (default: 127.0.0.1)"},
    {name = "inspect", kind = "flag", short = "", help = "Print inventory of resources, tools, and prompts then exit"},
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-xdist",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["jac_mcp*"]

[tool.setuptools.package-data]
"*" = ["*.jac", "*.impl/*.jac", "*.cl/*.jac"]
jac_mcp = ["content/*.md", "content/docs/*.md", "content/docs/*.spec", "content/docs/*.jac", "_precompiled/**/*.jir", "_precompiled/manifest.json"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
