[project]
name = "jac-scale"
version = "0.2.4"
description = ""
authors = [{ name = "Jason Mars", email = "jason@mars.ninja" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0.0",
    "jaclang>=0.12.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "docker>=7.1.0,<8.0.0",
    "kubernetes>=34.1.0,<35.0.0",
    "pymongo>=4.15.4,<5.0.0",
    "redis>=7.1.0,<8.0.0",
    "fastapi>=0.121.3,<0.122.0",
    "uvicorn>=0.38.0,<0.39.0",
    "pyjwt>=2.10.1,<2.11.0",
    "fastapi-sso>=0.18.0,<1.0.0",
    "python-multipart>=0.0.21,<1.0.0",
    "prometheus-client>=0.21.0,<1.0.0"
]

[project.entry-points."jac"]
scale = "jac_scale.plugin:JacCmd"
scale_plugin_config = "jac_scale.plugin_config:JacScalePluginConfig"

[tool.jac.hooks]
scale = "create_cmd,create_j_context,create_server,get_api_server_class,get_user_manager,store"
scale_plugin_config = "get_plugin_metadata,get_config_schema"

[tool.jac.meta]
name = "scale"
description = "Jac Scale - Deploy and scale Jac applications with Kubernetes"

[tool.jac.commands.destroy]
help = "Remove deployment from target platform"
group = "deployment"
args = [
    {name = "file_path", kind = "positional", help = "Path to .jac file"},
    {name = "target", default = "kubernetes", help = "Deployment target (kubernetes, aws, gcp, etc.)"},
    {name = "component", default = "", help = "Component to destroy (application, database, cache, monitoring, dashboard)"},
]

[tool.jac.commands.status]
help = "Show deployment status of jaseci application on target platform"
group = "deployment"
args = [
    {name = "file_path", kind = "positional", help = "Path to .jac file"},
    {name = "target", default = "kubernetes", help = "Deployment target (kubernetes, aws, gcp, etc.)"},
]

[tool.jac.extensions.start]
args = [
    {name = "scale", kind = "flag", short = "", help = "Deploy to a target platform instead of running locally"},
    {name = "build", kind = "flag", short = "b", help = "Build and push Docker image (with --scale)"},
    {name = "experimental", kind = "flag", short = "e", help = "Use experimental mode (install from repo instead of PyPI)"},
    {name = "target", default = "kubernetes", help = "Deployment target (kubernetes, aws, gcp, etc.)"},
    {name = "registry", default = "dockerhub", help = "Image registry (dockerhub, ecr, gcr, etc.)"},
]

[tool.setuptools.packages.find]
include = ["jac_scale*"]

[tool.setuptools.package-data]
"*" = ["*.jac", "*.impl/*.jac", "*.cl/*.jac"]
jac_scale = ["_precompiled/**/*.jir", "_precompiled/manifest.json", "templates/*.html"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
