[project]
name = "jaclang"
version = "0.16.7"
description = "Jac programming language - Python-like syntax, compiles to Python bytecode, JavaScript, and native machine code with novel constructs for AI-integrated programming."
authors = [{ name = "Jason Mars", email = "jason@mars.ninja" }]
maintainers = [{ name = "Jason Mars", email = "jason@mars.ninja" }]
license = "MIT"
readme = "README.md"
keywords = [
    "jac",
    "jaclang",
    "jaseci",
    "python",
    "programming-language",
    "machine-learning",
    "artificial-intelligence",
]
requires-python = ">=3.12"
dependencies = ["llvmlite>=0.43.0"]
# Note: lark, pygls are vendored; pluggy replaced by jaclang/plugin.py

[project.urls]
Repository = "https://github.com/jaseci-labs/jaseci"
Homepage = "https://jaseci.org"
Documentation = "https://docs.jaseci.org"
Source = "https://github.com/jaseci-labs/jaseci/tree/main/jac"
Issues = "https://github.com/jaseci-labs/jaseci/issues"
Changelog = "https://github.com/jaseci-labs/jaseci/blob/main/docs/docs/community/release_notes/jaclang.md"

[project.scripts]
jac = "jaclang.jac0core.cli_boot:start_cli"

[project.entry-points.pytest11]
jaclang = "jaclang.pytest_plugin"

# Virtual `@jac/desktop` SDK module (the built-in desktop OS-capability plugins),
# resolved by the modresolver's jac.modules mechanism. Ships in core now.
[project.entry-points."jac.modules"]
desktop = "jaclang.runtimelib.client.desktop_plugin_config:desktop_sdk_path"

[project.entry-points."jac.module_exports"]
desktop = "jaclang.runtimelib.client.desktop_plugin_config:desktop_sdk_exports"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.1",
    "watchdog>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["jaclang*"]

[tool.setuptools.package-data]
"*" = ["*.jac", "*.impl/*.jac", "*.cl/*.jac", "*.lark", "*.pyi", "py.typed"]
jaclang = [
    "sitecustomize.py",
    "_precompiled/**/*.jir",
    "_precompiled/manifest.json",
    "cli/skills/*.md",
    # Built-in client/desktop framework: project templates + the desktop target's
    # native webview assets and the @jac/desktop plugin SDK (transpiled at build time)
    "runtimelib/client/templates/**/*",
    "runtimelib/client/templates/**/.gitignore",
    "runtimelib/client/targets/desktop/**/*.jac",
    "runtimelib/client/targets/desktop/native/webview/*.sh",
    "runtimelib/client/targets/desktop/native/webview/*.md",
    # Built-in shadcn/ui provider: component registry (json/css/.cl.jac), themes,
    # and the jac-shadcn project template (formerly the jac-super shadcn plugin).
    "cli/shadcn/registry/**/*",
    "cli/shadcn/templates/**/*",
    "cli/shadcn/templates/**/.gitignore",
]

[tool.setuptools]
py-modules = ["_jac_finder"]
include-package-data = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
